--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ videos_bellas_yt.json
 videos_carpintero_yt.json
 videos_mousike_yt.json
 videos_xmf_yt.json
+playlists_emiliovillalba_yt.json
+videos_emiliovillalba_yt.json
+
