--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ videos_mousike_yt.json
 videos_xmf_yt.json
 playlists_emiliovillalba_yt.json
 videos_emiliovillalba_yt.json
-
+playlists_yt.json
+videos_yt.json
