--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,69 @@
+asn1crypto==0.24.0
 astroid==1.6.5
+attrs==18.2.0
+Automat==0.7.0
 autopep8==1.3.5
 backcall==0.1.0
-cachetools==2.1.0
+beautifulsoup4==4.6.3
+bs4==0.0.1
+cachetools==3.0.0
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
+constantly==15.1.0
+cryptography==2.4.2
+cssselect==1.0.3
 decorator==4.3.0
-google-api-python-client==1.7.3
-google-auth==1.5.0
+et-xmlfile==1.0.1
+google-api-python-client==1.7.7
+google-auth==1.6.2
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.2.0
-httplib2==0.11.3
+httplib2==0.12.0
+hyperlink==18.0.0
 idna==2.7
+incremental==17.5.0
 ipython==6.4.0
 ipython-genutils==0.2.0
 isort==4.3.4
+jdcal==1.4
 jedi==0.12.0
 lazy-object-proxy==1.3.1
+lxml==4.2.5
 mccabe==0.6.1
+oauth2client==4.1.3
 oauthlib==2.1.0
+openpyxl==2.5.12
+parsel==1.5.1
 parso==0.2.1
 pexpect==4.6.0
 pickleshare==0.7.4
 pkg-resources==0.0.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
-pyasn1==0.4.3
-pyasn1-modules==0.2.1
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
 pycodestyle==2.4.0
+pycparser==2.19
+PyDispatcher==2.0.5
 Pygments==2.2.0
+PyHamcrest==1.9.0
 pylint==1.9.2
+pyOpenSSL==18.0.0
+pyparsing==2.3.0
+queuelib==1.5.0
 requests==2.19.1
 requests-oauthlib==1.0.0
-rsa==3.4.2
+rsa==4.0
+Scrapy==1.5.1
+service-identity==18.1.0
 simplegeneric==0.8.1
-six==1.11.0
+six==1.12.0
 traitlets==4.3.2
+Twisted==18.9.0
 uritemplate==3.0.0
 urllib3==1.23
+w3lib==1.19.0
 wcwidth==0.1.7
 wrapt==1.10.11
+zope.interface==4.6.0
